k8s-cluster-configuration/applications/agentgrant-relay/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: agentgrant-relay-service
  namespace: agentgrant-relay
spec:
  selector:
    app: agentgrant-relay
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8646
